# Scraping_example

Scraping/: README.md  as_main.py  data.json  main.py  pyproject.toml
Test_Scrapping/Test_Scrap/: pyproject.toml
Test_Scrapping/Test_Scrap/Police/: async_main.py  main.py
Test_Scrapping/Test_Scrap/Police/files/: data.csv  data.json
