[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Pavlik-Ravlik <pastet1990@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.2.1"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
